Improving the structure of the application layer (WIP).
