# Northwind.Application/Products/Commands/UpdateProduct/UpdateProductCommandHandler.cs
@@ -2,13 +2,12 @@
 using System.Threading.Tasks;
 using MediatR;
 using Northwind.Application.Exceptions;
-using Northwind.Application.Products.Models;
 using Northwind.Domain.Entities;
 using Northwind.Persistence;
 
-namespace Northwind.Application.Products.Commands
+namespace Northwind.Application.Products.Commands.UpdateProduct
 {
-    public class UpdateProductCommandHandler : IRequestHandler<UpdateProductCommand, ProductDto>
+    public class UpdateProductCommandHandler : IRequestHandler<UpdateProductCommand, Unit>
     {
         private readonly NorthwindDbContext _context;
 
@@ -17,10 +16,9 @@ namespace Northwind.Application.Products.Commands
             _context = context;
         }
 
-        public async Task<ProductDto> Handle(UpdateProductCommand request, CancellationToken cancellationToken)
+        public async Task<Unit> Handle(UpdateProductCommand request, CancellationToken cancellationToken)
         {
-            var entity = await _context.Products
-                .FindAsync(request.ProductId);
+            var entity = await _context.Products.FindAsync(request.ProductId);
 
             if (entity == null)
             {
@@ -36,7 +34,7 @@ namespace Northwind.Application.Products.Commands
 
             await _context.SaveChangesAsync(cancellationToken);
 
-            return ProductDto.Create(entity);
+            return Unit.Value;
         }
     }
 }
